--- a/front/index.html
+++ b/front/index.html
@@ -6,8 +6,38 @@
     <title>Filmes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css" rel="stylesheet">
 </head>
-<body>
+<body onload="obterFilmes()">
     <div class="container mt-5">
+
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="d-none alert alert-danger alert-dismissible fade" role="alert">
+                    Tá errado sa merda aí ein, preenche tudo po
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-4">
+                <div class="form-floating mb-3">
+                 <input type="text" id="tituloInput" class="form-control" placeholder="Só server pra fazer flutuar">
+                <label for="tituloInput">Título: </label>
+                </div>
+            </div>
+            <div class="col-md-8 col-lg-4">
+                <div class="form-floating mb-3">
+                <input type="text" id="sinopseInput" class="form-control" placeholder="Só serve pra fazer flutuar">
+                <label for="sinopseInput">Sinopse: </label>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <button class="btn btn-outline-primary w-100" onclick="cadastrarFilme()">Cadastrar</button>
+            </div>
+        </div>
+
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <table class="table table-striped table-hover text-center filmes">
@@ -25,7 +55,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios.dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
